--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <!--以下1行、fontawesome導入の為、追記-->
     <script src="https://kit.fontawesome.com/e6d830504b.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="turbolinks-cache-control" content="no-cache"><!--Turbolinksのキャッシュ停止-->
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -14,30 +15,34 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-sm navbar-dark bg-secondary p-1">
-        <a class="navbar-brand" href="/" style="margin-left: 5%;"><%= image_tag 'logo.png', :size =>'100x50' %></a>
-          <div class="collapse navbar-collapse justify-content-end" style="margin-right: 5%;">
-            <ul class="navbar-nav">
+      <nav class="navbar navbar-expand-md navbar-light border-bottom p-1">
+      <div class="container">
+        <a class="navbar-brand" href="/"><%= image_tag 'logo.png', :size =>'100x50' %></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown" style="">
+            <div class="navbar-nav text-center ml-auto">
               <% if user_signed_in? %>
-                <li class="nav-item mr-2 p-1 bg-light" style="width: 110px; text-align:center;"><%= link_to 'マイページ', user_path(current_user.id), class: "", style: "text-decoration: none; color: black ;" %></li>
-                <li class="nav-item mr-2 p-1 bg-light" style="width: 110px; text-align:center;"><%= link_to 'PC構成リスト一覧', pc_configurations_path, class: "", style: "text-decoration: none; color: black ;" %></li>
-                <li class="nav-item mr-2 p-1 bg-light" style="width: 110px; text-align:center;"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "", style: "text-decoration: none; color: black ;" %></li>
+                <div class="nav-item d-flex align-items-center justify-content-center"><%= link_to 'マイページ', user_path(current_user.id), class: "my-1 mr-1 p-1 text-secondary", style: "text-decoration: none; background-color: #DDDDDD;" %></div>
+                <div class="nav-item my-1 mr-1 p-1" style="background-color: #DDDDDD;"><%= link_to 'PCパーツ一覧', parts_path, class: "text-secondary", style: "text-decoration: none;" %></div>
+                <div class="nav-item my-1 mr-1 p-1" style="background-color: #DDDDDD;"><%= link_to 'PC構成リスト一覧', pc_configurations_path, class: "text-secondary", style: "text-decoration: none;" %></div>
+                <div class="nav-item my-1 mr-1 p-1" style="background-color: #DDDDDD;"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "text-secondary", style: "text-decoration: none;" %></div>
               <% else %>
-                <li class="nav-item mr-2 p-1 " style="width: 90px; text-align:center;"><%= link_to '新規登録', new_user_registration_path, class: "", style: "text-decoration: none; color: black ;" %></li>
-                <li class="nav-item mr-2 p-1 bg-light" style="width: 90px; text-align:center;"><%= link_to 'ログイン', new_user_session_path, class: "", style: "text-decoration: none; color: black ;" %></li>
+                <li class="nav-item my-1 mr-1 p-1" style="background-color: #DDDDDD;"><%= link_to '新規登録', new_user_registration_path, class: "text-secondary", style: "text-decoration: none;" %></li>
+                <li class="nav-item my-1 mr-1 p-1" style="background-color: #DDDDDD;"><%= link_to 'ログイン', new_user_session_path, class: "text-secondary", style: "text-decoration: none;" %></li>
               <% end %>
-            </ul>
+            </div>
           </div>
+        </div>
       </nav>
     </header>
     <div class="row">
-      <div class="col-md-10 offset-md-1 mt-1 text-center">
-        <% if user_signed_in? %>
-          <%= form_with url:searchs_path, method: :get, local: true do |f| %>
-            <%= f.select 'search[model]', options_for_select({ "投稿" => "post", "パーツ" => "part" }) %>
-            <%= f.text_field 'search[value]' %>
-            <%= f.submit :"検索", class: "btn btn-sm btn-info" %>
-          <% end %>
+      <div class="col-md-10 offset-md-1 text-center">
+        <%= form_with url:searchs_path, method: :get, local: true do |f| %>
+          <%= f.select 'search[model]', options_for_select({ "投稿" => "post", "パーツ" => "part" }) %>
+          <%= f.text_field 'search[value]' %>
+          <%= f.submit :"検索", class: "btn btn-sm btn-info my-1" %>
         <% end %>
       </div>
     </div>
