--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,11 +4,13 @@
       <h3 class="user_sign-up__title__content">新規ユーザー登録</h3>
     </div>
   </div>
+  <div class="row pt-3 user_sign-up">
+    <div class="col-md-11 offset-md-1"><%= render "devise/shared/error_messages", resource: resource %></div>
+  </div>
   <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
   <div class="row user_sign-up__name-field">
-    <%= render "devise/shared/error_messages", resource: resource %>
     <p class="col-md-3 offset-md-2 user_sign-up__name-field__label">ユーザー名</p>
-    <div class="col-md-5 offset-md-1 mb-4 user_sign-up__name-field__field"><%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "ニックネーム", size: 30 %></div>
+    <div class="col-md-5 offset-md-1 mb-4 user_sign-up__name-field__field"><%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "ユーザーネーム", size: 30 %></div>
   </div>
   <div class="row user_sign-up__email-field">
     <p class="col-md-3 offset-md-2 user_sign-up__email-field__label">メールアドレス</p>
@@ -16,7 +18,7 @@
   </div>
   <div class="row user_sign-up__password-field">
     <p class="col-md-3 offset-md-2 user_sign-up__password-field__label">パスワード</p>
-    <div class="col-md-5 offset-md-1 mb-4 user_sign-up__password-field__field"><%= f.password_field :password, autocomplete: "new-password", placeholder: "6文字以上", size: 30 %></div>
+    <div class="col-md-5 offset-md-1 mb-4 user_sign-up__password-field__field"><%= f.password_field :password, autocomplete: "new-password", placeholder: "半角英数字、6文字以上", size: 30 %></div>
   </div>
   <div class="row user_sign-up__confirm-field">
     <p class="col-md-3 offset-md-2 user_sign-up__confirm-field__label">パスワード(確認用)</p>
