--- a/app/views/draft_configurations/index.html.erb
+++ b/app/views/draft_configurations/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <% if DraftConfiguration.exists?(user_id: current_user.id) %>
     <% if @cpu_existing_configuration.nil? %>
-      <div class="row pt-2 pb-2 border post-index">
+      <div class="row py-2 border post-index">
         <div class="col-md-12 post-index">
           <div class="">
             <%= link_to part_tag_parts_path(1) do %>
@@ -16,27 +16,27 @@
         </div>
       </div>
     <% else %>
-      <div class="row pt-2 pb-2 border post-index">
-        <div class="col-md-6 d-flex align-items-center post-index">
+      <div class="row py-2 border post-index">
+        <div class="col-md-6 my-1 d-flex align-items-center justify-content-center justify-content-center post-index">
           <%= image_tag @cpu_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
           <%= @cpu_existing_configuration.part.name %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center justify-content-center post-index">
           ¥<%= @cpu_existing_configuration.part.price.to_s(:delimited) %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center justify-content-center post-index">
           <%= form_with model: @cpu_existing_configuration do |f| %>
           <%= f.select :quantity, [["1", 1], ["2", 2], ["3", 3]] %>
-          <%= f.submit "変更", class: "btn btn-sm btn-success"%>
+          <%= f.submit "変更", class: "btn btn-sm btn-primary"%>
           <% end %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center justify-content-center post-index">
           <%= link_to "削除する", draft_configuration_path(@cpu_existing_configuration.id), class: "btn btn-sm btn-danger", method: :delete %>
         </div>
       </div>
     <% end %>
     <% if @memory_existing_configuration.nil? %>
-      <div class="row pt-2 pb-2 border post-index">
+      <div class="row py-2 border post-index">
         <div class="col-md-12 post-index">
           <div class="">
             <%= link_to part_tag_parts_path(14) do %>
@@ -46,27 +46,27 @@
         </div>
       </div>
     <% else %>
-      <div class="row pt-2 pb-2 border post-index">
-        <div class="col-md-6 d-flex align-items-center post-index">
+      <div class="row py-2 border post-index">
+        <div class="col-md-6 my-1 d-flex align-items-center justify-content-center post-index">
           <%= image_tag @memory_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
           <%= @memory_existing_configuration.part.name %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           ¥<%= @memory_existing_configuration.part.price.to_s(:delimited) %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= form_with model: @memory_existing_configuration do |f| %>
           <%= f.select :quantity, [["1", 1], ["2", 2], ["3", 3]] %>
-          <%= f.submit "変更", class: "btn btn-sm btn-success"%>
+          <%= f.submit "変更", class: "btn btn-sm btn-primary"%>
           <% end %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= link_to "削除する", draft_configuration_path(@memory_existing_configuration.id), class: "btn btn-sm btn-danger", method: :delete %>
         </div>
       </div>
     <% end %>
     <% if @gpu_existing_configuration.nil? %>
-      <div class="row pt-2 pb-2 border post-index">
+      <div class="row py-2 border post-index">
         <div class="col-md-12 post-index">
           <div class="">
             <%= link_to part_tag_parts_path(25) do %>
@@ -76,27 +76,27 @@
         </div>
       </div>
     <% else %>
-      <div class="row pt-2 pb-2 border post-index">
-        <div class="col-md-6 d-flex align-items-center post-index">
+      <div class="row py-2 border post-index">
+        <div class="col-md-6 my-1 d-flex align-items-center justify-content-center post-index">
           <%= image_tag @gpu_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
           <%= @gpu_existing_configuration.part.name %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           ¥<%= @gpu_existing_configuration.part.price.to_s(:delimited) %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= form_with model: @gpu_existing_configuration do |f| %>
           <%= f.select :quantity, [["1", 1], ["2", 2], ["3", 3]] %>
-          <%= f.submit "変更", class: "btn btn-sm btn-success"%>
+          <%= f.submit "変更", class: "btn btn-sm btn-primary"%>
           <% end %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= link_to "削除する", draft_configuration_path(@gpu_existing_configuration.id), class: "btn btn-sm btn-danger", method: :delete %>
         </div>
       </div>
     <% end %>
     <% if @mb_existing_configuration.nil? %>
-      <div class="row pt-2 pb-2 border post-index">
+      <div class="row py-2 border post-index">
         <div class="col-md-12 post-index">
           <div class="">
             <%= link_to part_tag_parts_path(48) do %>
@@ -106,27 +106,27 @@
         </div>
       </div>
     <% else %>
-      <div class="row pt-2 pb-2 border post-index">
-        <div class="col-md-6 d-flex align-items-center post-index">
+      <div class="row py-2 border post-index">
+        <div class="col-md-6 my-1 d-flex align-items-center justify-content-center post-index">
           <%= image_tag @mb_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
           <%= @mb_existing_configuration.part.name %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           ¥<%= @mb_existing_configuration.part.price.to_s(:delimited) %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= form_with model: @mb_existing_configuration do |f| %>
           <%= f.select :quantity, [["1", 1], ["2", 2], ["3", 3]] %>
-          <%= f.submit "変更", class: "btn btn-sm btn-success"%>
+          <%= f.submit "変更", class: "btn btn-sm btn-primary"%>
           <% end %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= link_to "削除する", draft_configuration_path(@mb_existing_configuration.id), class: "btn btn-sm btn-danger", method: :delete %>
         </div>
       </div>
     <% end %>
     <% if @cooler_existing_configuration.nil? %>
-      <div class="row pt-2 pb-2 border post-index">
+      <div class="row py-2 border post-index">
         <div class="col-md-12 post-index">
           <div class="">
             <%= link_to part_tag_parts_path(109) do %>
@@ -136,27 +136,27 @@
         </div>
       </div>
     <% else %>
-      <div class="row pt-2 pb-2 border post-index">
-        <div class="col-md-6 d-flex align-items-center post-index">
+      <div class="row py-2 border post-index">
+        <div class="col-md-6 my-1 d-flex align-items-center justify-content-center post-index">
           <%= image_tag @cooler_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
           <%= @cooler_existing_configuration.part.name %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           ¥<%= @cooler_existing_configuration.part.price.to_s(:delimited) %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= form_with model: @cooler_existing_configuration do |f| %>
           <%= f.select :quantity, [["1", 1], ["2", 2], ["3", 3]] %>
-          <%= f.submit "変更", class: "btn btn-sm btn-success"%>
+          <%= f.submit "変更", class: "btn btn-sm btn-primary"%>
           <% end %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= link_to "削除する", draft_configuration_path(@cooler_existing_configuration.id), class: "btn btn-sm btn-danger", method: :delete %>
         </div>
       </div>
     <% end %>
     <% if @case_existing_configuration.nil? %>
-      <div class="row pt-2 pb-2 border post-index">
+      <div class="row py-2 border post-index">
         <div class="col-md-12 post-index">
           <div class="">
             <%= link_to part_tag_parts_path(65) do %>
@@ -166,27 +166,27 @@
         </div>
       </div>
     <% else %>
-      <div class="row pt-2 pb-2 border post-index">
-        <div class="col-md-6 d-flex align-items-center post-index">
+      <div class="row py-2 border post-index">
+        <div class="col-md-6 my-1 d-flex align-items-center justify-content-center post-index">
           <%= image_tag @case_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
           <%= @case_existing_configuration.part.name %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           ¥<%= @case_existing_configuration.part.price.to_s(:delimited) %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= form_with model: @case_existing_configuration do |f| %>
           <%= f.select :quantity, [["1", 1], ["2", 2], ["3", 3]] %>
-          <%= f.submit "変更", class: "btn btn-sm btn-success"%>
+          <%= f.submit "変更", class: "btn btn-sm btn-primary"%>
           <% end %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= link_to "削除する", draft_configuration_path(@case_existing_configuration.id), class: "btn btn-sm btn-danger", method: :delete %>
         </div>
       </div>
     <% end %>
     <% if @power_existing_configuration.nil? %>
-      <div class="row pt-2 pb-2 border post-index">
+      <div class="row py-2 border post-index">
         <div class="col-md-12 post-index">
           <div class="">
             <%= link_to part_tag_parts_path(86) do %>
@@ -196,27 +196,27 @@
         </div>
       </div>
     <% else %>
-      <div class="row pt-2 pb-2 border post-index">
-        <div class="col-md-6 d-flex align-items-center post-index">
+      <div class="row py-2 border post-index">
+        <div class="col-md-6 my-1 d-flex align-items-center justify-content-center post-index">
           <%= image_tag @power_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
           <%= @power_existing_configuration.part.name %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           ¥<%= @power_existing_configuration.part.price.to_s(:delimited) %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= form_with model: @power_existing_configuration do |f| %>
           <%= f.select :quantity, [["1", 1], ["2", 2], ["3", 3]] %>
-          <%= f.submit "変更", class: "btn btn-sm btn-success"%>
+          <%= f.submit "変更", class: "btn btn-sm btn-primary"%>
           <% end %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= link_to "削除する", draft_configuration_path(@power_existing_configuration.id), class: "btn btn-sm btn-danger", method: :delete %>
         </div>
       </div>
     <% end %>
     <% if @ssd_existing_configuration.nil? %>
-      <div class="row pt-2 pb-2 border post-index">
+      <div class="row py-2 border post-index">
         <div class="col-md-12 post-index">
           <div class="">
             <%= link_to part_tag_parts_path(121) do %>
@@ -226,27 +226,27 @@
         </div>
       </div>
     <% else %>
-      <div class="row pt-2 pb-2 border post-index">
-        <div class="col-md-6 d-flex align-items-center post-index">
+      <div class="row py-2 border post-index">
+        <div class="col-md-6 my-1 d-flex align-items-center justify-content-center post-index">
           <%= image_tag @ssd_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
           <%= @ssd_existing_configuration.part.name %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           ¥<%= @ssd_existing_configuration.part.price.to_s(:delimited) %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= form_with model: @ssd_existing_configuration do |f| %>
           <%= f.select :quantity, [["1", 1], ["2", 2], ["3", 3]] %>
-          <%= f.submit "変更", class: "btn btn-sm btn-success"%>
+          <%= f.submit "変更", class: "btn btn-sm btn-primary"%>
           <% end %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= link_to "削除する", draft_configuration_path(@ssd_existing_configuration.id), class: "btn btn-sm btn-danger", method: :delete %>
         </div>
       </div>
     <% end %>
     <% if @hdd_existing_configuration.nil? %>
-      <div class="row pt-2 pb-2 border post-index">
+      <div class="row py-2 border post-index">
         <div class="col-md-12 post-index">
           <div class="">
             <%= link_to part_tag_parts_path(141) do %>
@@ -256,21 +256,21 @@
         </div>
       </div>
     <% else %>
-      <div class="row pt-2 pb-2 border post-index">
-        <div class="col-md-6 d-flex align-items-center post-index">
+      <div class="row py-2 border post-index">
+        <div class="col-md-6 my-1 d-flex align-items-center justify-content-center post-index">
           <%= image_tag @hdd_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
           <%= @hdd_existing_configuration.part.name %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           ¥<%= @hdd_existing_configuration.part.price.to_s(:delimited) %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= form_with model: @hdd_existing_configuration do |f| %>
           <%= f.select :quantity, [["1", 1], ["2", 2], ["3", 3]] %>
-          <%= f.submit "変更", class: "btn btn-sm btn-success"%>
+          <%= f.submit "変更", class: "btn btn-sm btn-primary"%>
           <% end %>
         </div>
-        <div class="col-md-2 d-flex align-items-center post-index">
+        <div class="col-md-2 my-1 d-flex align-items-center justify-content-center post-index">
           <%= link_to "削除する", draft_configuration_path(@hdd_existing_configuration.id), class: "btn btn-sm btn-danger", method: :delete %>
         </div>
       </div>
