--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,10 +1,15 @@
 <div class="container bg-light new-post">
   <div class="row pt-3 new-post">
     <div class="col-md-10 offset-md-1 new-post__title">
-      <h4 class="col-md-10 offset-md-1 new-post__title">新規投稿フォーム</h4>
+      <h4>新規投稿フォーム</h4>
     </div>
   </div>
   <%= form_with model: @post, local:true do |f| %>
+  <div class="row new-post">
+    <div class="col-md-11 offset-md-1 new-post__title">
+      <%= render 'layouts/error_messages', model: f.object %>
+    </div>
+  </div>
   <div class="row pt-3 post-edit__form">
     <div class="col-md-3 offset-md-2 post-edit__form__label">タイトル</div>
     <div class="col-md-5 offset-md-1 post-edit__form__field"><%= f.text_field :title, placeholder:"タイトルを入力して下さい。", size: 30 %></div>
@@ -22,7 +27,7 @@
       <span class="post-edit__form__tag__label">タグ付け</span>
       <span class="small post-edit__form__tag__description">(タグの間にスペースを入力することで複数のタグを付けることができます。)</span>
     </div>
-    <div class="col-md-5 offset-md-1 post-edit__form__label"><%= f.text_field :names, placeholder:"CPU　ゲーミング", size: 30 %></div>
+    <div class="col-md-5 offset-md-1 post-edit__form__label"><%= f.text_field :names, placeholder:"例：CPU　ゲーミング", size: 30 %></div>
   </div>
   <div class="row mt-2 pt-2 border-top post-edit__form__actions">
     <div class="col-md-5 offset-md-2 mb-2 post-edit__form__actions__btn"><%= f.submit '投稿する', class: "btn btn-success" %></div>
