--- a/app/views/pc_configurations/show.html.erb
+++ b/app/views/pc_configurations/show.html.erb
@@ -5,8 +5,8 @@
     </div>
   </div>
   <div class="row pt-3 new-post">
-    <div class="col-md-12 d-flex justify-content-center post-index">
-      <%= attachment_image_tag @pc_configuration, :image, fallback: "no_image.jpg", width: '70%', height: '90%' %>
+    <div class="col-sm-12 col-md-6 offset-md-3 d-flex justify-content-center align-items-center post-index">
+      <%= attachment_image_tag @pc_configuration, :image, fallback: "no_image.jpg", width: '70%', height: '100%' %>
     </div>
   </div>
   <div class="row pt-3 new-post">
