--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,17 @@
         <% end %>
       </div>
     </div>
-
     <main><%= yield %></main>
+    <footer>
+      <div class='bg-secondary p-4 mt-3'>
+        <div class='container'>
+          <div class='row'>
+            <div class="mx-auto">
+              <div class="text-light">CopyRight Infratop.inc</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
