--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="row pt-3 post-show__left">
     <div class="col-md-7 post-show__left">
-      <div class="mb-2 post-show__left__image"><%= attachment_image_tag @post, :image, fallback: "no_image.jpg", width: '90%', height: '90%' %></div>
+      <div class="mb-2 d-flex justify-content-center post-show__left__image"><%= attachment_image_tag @post, :image, fallback: "no_image.jpg", width: '90%', height: '90%' %></div>
       <div class="mb-2 post-show__left__title">タイトル：<%= @post.title %></div>
       <div class="mb-2 post-show__left__body">説明：<%= @post.body %></div>
       <% if @post_tags.present? %> <!--タグ付けの有無を判定して表示を切り替える-->
