--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -60,11 +60,7 @@
         <div class="post-index__content-box p-3">
           <div class="post-index__content-box__image"><%= attachment_image_tag pc_configuration, :image, fallback: "no_image.jpg", size: "300x200" %></div>
           <div class="text-dark post-index__content-box__title"><%= pc_configuration.title.truncate(20) %></div>
-          <div class="small post-index__content-box__user-name">
-            <%= link_to user_path(pc_configuration.user.id) do %>
-              <div class="text-secondary post-index__content-box__user-name__link">ユーザーネーム：<%= pc_configuration.user.name %></div>
-            <% end %>
-          </div>
+          <div class="small text-dark post-index__content-box__user-name">ユーザーネーム：<%= pc_configuration.user.name %></div>
           <div class="small text-dark post-index__content-box__created-at">投稿日時：<%= pc_configuration.created_at.to_s(:datetime_jp) %></div>
         </div>
         <% end %>
