[fix]スクレイピングのメーカー名取得処理修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,8 @@
                 <div class="nav-item d-flex align-items-center justify-content-center"><%= link_to 'PC構成リスト一覧', pc_configurations_path, class: "my-1 mr-1 p-1 text-secondary", style: "text-decoration: none; background-color: #DDDDDD;" %></div>
                 <div class="nav-item d-flex align-items-center justify-content-center"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "my-1 mr-1 p-1 text-secondary", style: "text-decoration: none; background-color: #DDDDDD;" %></div>
               <% else %>
+                <div class="nav-item d-flex align-items-center justify-content-center"><%= link_to 'PCパーツ一覧', parts_path, class: "my-1 mr-1 p-1 text-secondary", style: "text-decoration: none; background-color: #DDDDDD;" %></div>
+                <div class="nav-item d-flex align-items-center justify-content-center"><%= link_to 'PC構成リスト一覧', pc_configurations_path, class: "my-1 mr-1 p-1 text-secondary", style: "text-decoration: none; background-color: #DDDDDD;" %></div>
                 <div class="nav-item d-flex align-items-center justify-content-center"><%= link_to '新規登録', new_user_registration_path, class: "my-1 mr-1 p-1 text-secondary", style: "text-decoration: none; background-color: #DDDDDD;" %></div>
                 <div class="nav-item d-flex align-items-center justify-content-center"><%= link_to 'ログイン', new_user_session_path, class: "my-1 mr-1 p-1 text-secondary", style: "text-decoration: none; background-color: #DDDDDD;" %></div>
               <% end %>
@@ -52,7 +54,7 @@
         <div class='container'>
           <div class='row'>
             <div class="mx-auto">
-              <div class="text-light">CopyRight Infratop.inc</div>
+              <div class="text-light">Copyright © PCreators All Rights Reserved.</div>
             </div>
           </div>
         </div>
