--- a/app/views/post_comments/_form.html.erb
+++ b/app/views/post_comments/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_with model:[post, post_comment] do |f| %>
-  <div><%= f.text_area :comment, rows:'5', cols:"30", placeholder: "コメントしましょう" %></div>
-  <div><%= f.submit "コメントする", class: "btn btn-success" %></div>
+<% if user_signed_in? %>
+  <%= form_with model:[post, post_comment] do |f| %>
+    <div><%= f.text_area :comment, rows:'5', cols:"30", placeholder: "コメントしましょう" %></div>
+    <div><%= f.submit "コメントする", class: "btn btn-success" %></div>
+  <% end %>
 <% end %>
