--- a/app/views/post_favorites/_favorite.html.erb
+++ b/app/views/post_favorites/_favorite.html.erb
@@ -1,9 +1,11 @@
-<% if post.favorited_by?(current_user) %>
-  <%= link_to post_post_favorites_path(post), method: :delete, remote: true do %>
-    <span class="text-danger">♥ </span><span class="text-secondary"><%= post.post_favorites.count %>いいね</span>
-  <% end %>
-<% else %>
-  <%= link_to post_post_favorites_path(post), method: :post, remote: true do %>
-    <span class="text-primary">♡ </span><span class="text-secondary"><%= post.post_favorites.count %>いいね</span>
+<% if user_signed_in? %>
+  <% if post.favorited_by?(current_user) %>
+    <%= link_to post_post_favorites_path(post), method: :delete, remote: true do %>
+      <span class="text-danger">♥ </span><span class="text-secondary"><%= post.post_favorites.count %>いいね</span>
+    <% end %>
+  <% else %>
+    <%= link_to post_post_favorites_path(post), method: :post, remote: true do %>
+      <span class="text-primary">♡ </span><span class="text-secondary"><%= post.post_favorites.count %>いいね</span>
+    <% end %>
   <% end %>
 <% end %>
