[fix]デプロイの為、parts.scss内のurlをimage-urlに変更

--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -1,63 +1,63 @@
-<div class="container bg-light post-index">
-  <div class="row pt-2 post-index">
-    <div class="col-md-11 offset-md-1 post-index">
+<div class="container bg-light part-index">
+  <div class="row pt-2 part-index">
+    <div class="col-md-11 offset-md-1 part-index__title">
       <h4>パーツリンク一覧</h4>
     </div>
   </div>
-  <div class="row d-flex justify-content-center post-index">
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center post-index" style="background-color: #DDDDDD;">
+  <div class="row d-flex justify-content-center part-index">
+    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__cpu" style="background-color: #DDDDDD;">
       <%= link_to part_tag_parts_path(1) do %>
         <div class="text-secondary">CPU</div>
       <% end %>
     </div>
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center post-index" style="background-color: #DDDDDD;">
+    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__memory" style="background-color: #DDDDDD;">
       <%= link_to part_tag_parts_path(14) do %>
         <div class="text-secondary">メモリー</div>
       <% end %>
     </div>
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center post-index" style="background-color: #DDDDDD;">
+    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__gpu" style="background-color: #DDDDDD;">
       <%= link_to part_tag_parts_path(25) do %>
         <div class="text-secondary">グラフィックボード</div>
       <% end %>
     </div>
   </div>
-  <div class="row d-flex justify-content-center post-index">
+  <div class="row d-flex justify-content-center part-index__mb">
     <div class="col-md-3 py-2 mb-2 mx-2 text-center post-index" style="background-color: #DDDDDD;">
       <%= link_to part_tag_parts_path(48) do %>
         <div class="text-secondary">マザーボード</div>
       <% end %>
     </div>
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center post-index" style="background-color: #DDDDDD;">
+    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__cooler" style="background-color: #DDDDDD;">
       <%= link_to part_tag_parts_path(109) do %>
         <div class="text-secondary">CPUクーラー</div>
       <% end %>
     </div>
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center post-index" style="background-color: #DDDDDD;">
+    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__case" style="background-color: #DDDDDD;">
       <%= link_to part_tag_parts_path(65) do %>
         <div class="text-secondary">PCケース</div>
       <% end %>
     </div>
   </div>
-  <div class="row d-flex justify-content-center post-index">
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center post-index" style="background-color: #DDDDDD;">
+  <div class="row d-flex justify-content-center part-index">
+    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__power" style="background-color: #DDDDDD;">
       <%= link_to part_tag_parts_path(86) do %>
         <div class="text-secondary">PC電源</div>
       <% end %>
     </div>
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center post-index" style="background-color: #DDDDDD;">
+    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__ssd" style="background-color: #DDDDDD;">
       <%= link_to part_tag_parts_path(121) do %>
         <div class="text-secondary">SSD</div>
       <% end %>
     </div>
-    <div class="col-md-3 py-2 mb-2 mx-2 text-center post-index" style="background-color: #DDDDDD;">
+    <div class="col-md-3 py-2 mb-2 mx-2 text-center part-index__hdd" style="background-color: #DDDDDD;">
       <%= link_to part_tag_parts_path(141) do %>
         <div class="text-secondary">HDD</div>
       <% end %>
     </div>
   </div>
 
-  <div class="row pt-2 post-index">
-    <div class="col-md-12 d-flex justify-content-center post-index">
+  <div class="row pt-2 part-index">
+    <div class="col-md-12 d-flex justify-content-center part-index__image-box">
       <div id="image-container">
         <div id="theTarget">
           <div class="image1"></div>
