--- a/app/views/parts/show.html.erb
+++ b/app/views/parts/show.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row part-show">
-    <div class="col-md-11 offset-md-1 part-show__title">
+    <div class="col-md-11 offset-md-1 part-show__messages">
       <% if flash[:notice] %>
         <div class="text-danger"><%= flash[:notice] %></div>
       <% end %>
