--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,8 +5,8 @@
     </div>
   </div>
   <%= form_with model:@user, local:true do |f| %>
-  <div class="row new-post">
-    <div class="col-md-11 offset-md-1 new-post__title">
+  <div class="row user-edit">
+    <div class="col-md-11 offset-md-1 user-edit__title">
       <%= render 'layouts/error_messages', model: f.object %>
     </div>
   </div>
