--- a/app/assets/stylesheets/parts.scss
+++ b/app/assets/stylesheets/parts.scss
@@ -7,17 +7,17 @@
 }
 //以下、デプロイに伴い"url"を"image-url"に変更実施
 .image1 {
-  background-image: image-url(image1.jpg);
+  background-image: image-url("image1.jpg");
 }
 .image2 {
-  background-image: image-url(image2.jpg);
+  background-image: image-url("image2.jpg");
 }
 .image3 {
-  background-image: image-url(image3.jpg);
+  background-image: image-url("image3.jpg");
 }
 .image4 {
-  background-image: image-url(image4.jpg);
+  background-image: image-url("image4.jpg");
 }
 .image5 {
-  background-image: image-url(image5.jpg);
+  background-image: image-url("image5.jpg");
 }
